RESOLVED FIXED54606
[Chromium] Control-Up/Down do not scroll by page on Chrome/Mac
https://bugs.webkit.org/show_bug.cgi?id=54606
Summary [Chromium] Control-Up/Down do not scroll by page on Chrome/Mac
Takashi Toyoshima
Reported 2011-02-16 18:23:56 PST
http://code.google.com/p/chromium/issues/detail?id=68975 Control-Up/Down should be PageUp/Down on Mac. It is in most programs (Xcode, Safari, etc.)
Attachments
Patch (1.44 KB, patch)
2011-02-16 18:38 PST, Takashi Toyoshima
no flags
Patch (1.45 KB, patch)
2011-02-22 21:34 PST, Takashi Toyoshima
no flags
Patch (1.42 KB, patch)
2011-02-22 21:45 PST, Takashi Toyoshima
no flags
Patch (1.44 KB, patch)
2011-02-22 22:01 PST, Takashi Toyoshima
no flags
Takashi Toyoshima
Comment 1 2011-02-16 18:38:40 PST
Shinichiro Hamaji
Comment 2 2011-02-22 21:12:35 PST
Adding [Chromium] prefix to the summary.
Shinichiro Hamaji
Comment 3 2011-02-22 21:19:42 PST
Comment on attachment 82734 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=82734&action=review r=me I think you would want to set cq? when you ask a review for your patch. > Source/WebKit/chromium/ChangeLog:5 > + Control-Up/Down should be PageUp/Down on Mac. I think it's nice to have prefixes for this kind of platform specific changes. > Source/WebKit/chromium/src/WebViewImpl.cpp:809 > + // Control-Up/Down should be PageUp/Downb on Mac. s/Downb/Down/
Takashi Toyoshima
Comment 4 2011-02-22 21:34:58 PST
WebKit Review Bot
Comment 5 2011-02-22 21:37:21 PST
Attachment 83440 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebKit/chromium/ChangeLog', u'Sourc..." exit_code: 1 Source/WebKit/chromium/src/WebViewImpl.cpp:815: One line control clauses should not use braces. [whitespace/braces] [4] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Shinichiro Hamaji
Comment 6 2011-02-22 21:40:26 PST
(In reply to comment #5) > Attachment 83440 [details] did not pass style-queue: > > Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebKit/chromium/ChangeLog', u'Sourc..." exit_code: 1 > > Source/WebKit/chromium/src/WebViewImpl.cpp:815: One line control clauses should not use braces. [whitespace/braces] [4] > Total errors found: 1 in 2 files True... I'm wondering why this cannot be detected in the previous time.
Takashi Toyoshima
Comment 7 2011-02-22 21:45:29 PST
WebKit Review Bot
Comment 8 2011-02-22 21:48:38 PST
Attachment 83441 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebKit/chromium/ChangeLog', u'Sourc..." exit_code: 1 Source/WebKit/chromium/src/WebViewImpl.cpp:811: More than one command on the same line in if [whitespace/parens] [4] Source/WebKit/chromium/src/WebViewImpl.cpp:812: More than one command on the same line in if [whitespace/parens] [4] Total errors found: 2 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Takashi Toyoshima
Comment 9 2011-02-22 21:52:43 PST
hum... In my local environment, check-webkit-style could not detect this style check error as previous bot could not. FYI % svn info Path: . URL: http://svn.webkit.org/repository/webkit/trunk Repository Root: http://svn.webkit.org/repository/webkit Repository UUID: 268f45cc-cd09-0410-ab3c-d52691b4dbfc Revision: 78759 Node Kind: directory Schedule: normal Last Changed Author: jorlow@chromium.org Last Changed Rev: 78759 Last Changed Date: 2011-02-16 18:28:10 -0800 (Wed, 16 Feb 2011)
Shinichiro Hamaji
Comment 10 2011-02-22 21:58:09 PST
Comment on attachment 83441 [details] Patch It looks like this check was fixed recently. http://trac.webkit.org/changeset/79102
Takashi Toyoshima
Comment 11 2011-02-22 22:01:31 PST
Shinichiro Hamaji
Comment 12 2011-02-22 22:04:56 PST
Comment on attachment 83445 [details] Patch Finally!
Takashi Toyoshima
Comment 13 2011-02-22 22:07:22 PST
Yes! I'm sorry for bothering you;(
WebKit Commit Bot
Comment 14 2011-02-23 01:42:54 PST
Comment on attachment 83445 [details] Patch Clearing flags on attachment: 83445 Committed r79427: <http://trac.webkit.org/changeset/79427>
WebKit Commit Bot
Comment 15 2011-02-23 01:43:00 PST
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 16 2011-02-23 02:19:02 PST
http://trac.webkit.org/changeset/79427 might have broken Windows Release (Build) and Windows Debug (Build)
Note You need to log in before you can comment on or make changes to this bug.