2011-02-23  Takashi Toyoshima  <toyoshim@chromium.org>

Reviewed by Shinichiro Hamaji.

        [chromium] Control-Up/Down should be PageUp/Down on Mac.
        https://bugs.webkit.org/show_bug.cgi?id=54606

        * src/WebViewImpl.cpp:
        (WebKit::WebViewImpl::scrollViewWithKeyboard):

Canonical link: https://commits.webkit.org/69347@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@79427 268f45cc-cd09-0410-ab3c-d52691b4dbfc